--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <li>Текстовая строка</li>
 </ul>
 
-<script src="jquery.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script src="script.js"></script>
 
 </body>
