--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 
 <div id="content">
   <span id="tools">
-     <button id="brush">Кисть</button>
-     <button id="line">Линия</button>
-     <button id="rectangle">Прямоугольник</button>
-     <button id="circle">Круг</button>
-     <button id="ellipse">Эллипс</button>
-     <button id="spray">Распылитель</button>
-     <button id="eraser">Стерка</button><br>
-     <button id="copy">Копировать</button>
-     <button id="paste">Вставить</button>
+     <button id="brush">Brush</button>
+     <button id="line">Line</button>
+     <button id="rectangle">Rectangle</button>
+     <button id="circle">Circle</button>
+     <button id="ellipse">Ellipse</button>
+     <button id="spray">Spray</button>
+     <button id="eraser">Eraser</button><br>
+     <button id="copy">Copy</button>
+     <button id="paste">Paste</button>
   </span>
 
     <span id="colors">
@@ -36,37 +36,18 @@
 
     <div id="functions">
         <br>
-        <button id="undo">Отменить</button>
-        <button id="redo">Вернуть</button>
-        <button id="id_download">Сохранить</button>
-        <button id="clear">Очистить</button>
+        <button id="undo">Undo</button>
+        <button id="redo">Redo</button>
+        <button id="id_download">Download</button>
+        <button id="clear">Clear</button>
         <br>
         <canvas id="brush_size" width="50" height="50"></canvas>
-        Кисть
-        Размер <input type="range" id="width_range" value="10">
-        Прозрачность <input type="range" id="opacity_range" value="100">
+        Brush
+        Size <input type="range" id="width_range" value="10">
+        Opacity <input type="range" id="opacity_range" value="100">
 
     </div>
 </div>
-<p>Уже сделано</p>
-<ul>
-    <li>Кисть</li>
-    <li>Прямоугольник</li>
-    <li>Стерка</li>
-    <li>Выбор цвета</li>
-    <li>Очистка области</li>
-    <li>Рисование фигур(круг, элипс)</li>
-    <li>Изменение размера линии</li>
-    <li>Изменение прозрачности линии</li>
-    <li>Аналог "Отменить действие" и "Вернуть"</li>
-    <li>Сохранение изображения на компьютер</li>
-    <li>Линия - распылитель</li>
-</ul>
-<p>Хочу реализовать</p>
-<ul>
-    <li>Буферизация(копировать,вставить)</li>
-    <li>Текстовая строка</li>
-</ul>
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script src="script.js"></script>
