--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
      <button id="eraser">Eraser</button><br>
      <button id="copy">Copy</button>
      <button id="paste">Paste</button>
+     <button id="text">Текст</button>
+     Text size
+     <input type="number" id="text-size" min="6" max="100" value="14">
   </span>
 
     <span id="colors">
