--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Paint-js</title>
     <link rel="stylesheet" type="text/css" href="style.css"/>
+    <meta charset="utf-8">
 </head>
 <body>
 <h1>Курсовая работа по<br> компьютерной графике</h1>
@@ -22,6 +23,7 @@
         <button id="copyrand">Копировать пр.обл.</button>
         <button id="paste">Вставить</button>
         <button id="text">Текст</button>
+        <br>
         Размер шрифта
         <input type="number" id="text-size" min="6" max="100" value="14">
         Шрифт
@@ -39,7 +41,6 @@
         <button class="red" id='#FF0000'></button>
         <button class="yellow" id='#FFFF00'></button>
         <button class="green" id='#008000'></button>
-        <button class="purple" id='#800080'></button>
         <input type="color" id="color">
 
         <input type="hidden" id="color_value_form">
@@ -65,26 +66,6 @@
 
     </div>
 </div>
-<p>Первоначально сделано</p>
-<ul>
-    <li>Кисть</li>
-    <li>Прямоугольник</li>
-    <li>Стерка</li>
-
-</ul>
-<p>Сделал после первого показа</p>
-<ul>
-    <li>Выбор цвета</li>
-    <li>Очистка области</li>
-    <li>Рисование фигур(круг, элипс)</li>
-    <li>Изменение размера линии</li>
-    <li>Изменение прозрачности линии</li>
-    <li>Аналог "Отменить действие" и "Вернуть"</li>
-    <li>Сохранение изображения на компьютер</li>
-    <li>Линия - распылитель</li>
-    <li>Буферизация(копировать,вставить)</li>
-    <li>Текстовая строка(с возможностью выбора размера текста)</li>
-</ul>
 
 <script src="jquery.min.js"></script>
 <script src="script.js"></script>
