--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
 </div>
 
-<script src="jquery.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script src="script.js"></script>
 
 </body>
