--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button id="text">Текст</button>
         <br>
         Размер шрифта
-        <input type="number" id="text-size" min="6" max="100" value="14">
+        <input type="number" id="text-size" min="6" max="100" value="14"><br>
         Шрифт
         <select id="font">
             <option value="LucidaConsole">Lucida Console</option>
