--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <button id="text">Текст</button>
         <br>
         Размер шрифта
-        <input type="number" id="text-size" min="6" max="100" value="14"><br>
-        Шрифт
+        <input type="number" id="text-size" min="6" max="100" value="14">
+       <br>Шрифт
         <select id="font">
             <option value="LucidaConsole">Lucida Console</option>
             <option value="Courier New">Courier New</option>
