--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
         <button id="copyrand">Копировать пр.обл.</button>
         <button id="paste">Вставить</button>
         <button id="text">Текст</button>
-        <br>
+        <br><div style="margin-left: 70px">
         Размер шрифта
         <input type="number" id="text-size" min="6" max="100" value="14">
-       <br>Шрифт
+        <br>Шрифт
         <select id="font">
             <option value="LucidaConsole">Lucida Console</option>
             <option value="Courier New">Courier New</option>
             <option value="Arial">Arial</option>
             <option value="ArialBlack">Arial Black</option>
-        </select>
+        </select></div>
     </div>
     <div id="manage">
         <canvas id="brush_size" width="50" height="50"></canvas>
-        Размер кисти <input type="range" id="width_range" value="10">
+        Размер кисти <input type="range" id="width_range" value="10" min="1">
         Прозрачность <input type="range" id="opacity_range" value="100">
     </div>
     <div id="colors">
@@ -64,7 +64,7 @@
 
 </div>
 
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+<script src="jquery.min.js"></script>
 <script src="script.js"></script>
 
 </body>
