--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
 </head>
 <body>
-
+<h1>Simple paint on js</h1>
 <div id="content">
     <div id="tools">
         <button id="brush">Brash</button>
