--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 </head>
 <body>
 <div id="content">
+  <h1>Paint Trabajo de Graficacion por Computadora</h1>
     <div id="tools">
         <button type="button" class="btn btn-light btn-sm" id="brush"><img src="https://img.icons8.com/cotton/24/000011/paint-brush.png"id="brush"></button>
         <button type="button" class="btn btn-light btn-sm" id="spray"><img src="https://img.icons8.com/office/24/000000/deodorant-spray.png"></button>
         <button type="button" class="btn btn-light btn-sm" id="fill"><img src="https://img.icons8.com/offices/24/000000/fill-color.png"></button>
         <button type="button" class="btn btn-light btn-sm" id="eraser"><img src="https://img.icons8.com/cotton/24/000000/erase.png"></button>
-        
+
         <button type="button" class="btn btn-light btn-sm" id="line"><img src="https://img.icons8.com/ultraviolet/24/000000/line.png"></button>
         <button type="button" class="btn btn-light btn-sm" id="rectangle"><img src="https://img.icons8.com/nolan/24/000000/rectangle-stroked.png"></button>
         <button type="button" class="btn btn-light btn-sm" id="circle"><img src="https://img.icons8.com/nolan/24/000000/unchecked-circle.png"></button>
@@ -23,7 +24,7 @@
         <br>
         <button class="btn btn-light btn-sm" id="text"><img src="https://img.icons8.com/office/24/000000/text-box.png"></button>
         <input  class="btn btn-light btn-sm" type="number" id="text-size" min="6" max="100" value="14">
-        
+
         <select class="btn btn-light btn-sm" id="font">
             <option value="LucidaConsole">Lucida Console</option>
             <option value="Courier New">Courier New</option>
