--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
 <div id="content">
-  <h1>Paint Trabajo de Graficacion por Computadora</h1>
     <div id="tools">
         <button type="button" class="btn btn-light btn-sm" id="brush"><img src="https://img.icons8.com/cotton/24/000011/paint-brush.png"id="brush"></button>
         <button type="button" class="btn btn-light btn-sm" id="spray"><img src="https://img.icons8.com/office/24/000000/deodorant-spray.png"></button>
@@ -20,6 +19,10 @@
         <button type="button" class="btn btn-light btn-sm" id="rectangle"><img src="https://img.icons8.com/nolan/24/000000/rectangle-stroked.png"></button>
         <button type="button" class="btn btn-light btn-sm" id="circle"><img src="https://img.icons8.com/nolan/24/000000/unchecked-circle.png"></button>
         <button type="button" class="btn btn-light btn-sm" id="ellipse"><img src="https://img.icons8.com/nolan/24/000000/triangle-stroked.png"></button>
+
+        <button type="button" class="btn btn-light btn-sm" id="lineBres">Bresenham Line</button>
+        <button type="button" class="btn btn-light btn-sm" id="circleBres">Bresenham Circle</button>
+
         <br>
         <br>
         <button class="btn btn-light btn-sm" id="text"><img src="https://img.icons8.com/office/24/000000/text-box.png"></button>
