--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
         <button type="button" class="btn btn-light btn-sm" id="line"><img src="https://img.icons8.com/ultraviolet/24/000000/line.png"></button>
         <button type="button" class="btn btn-light btn-sm" id="rectangle"><img src="https://img.icons8.com/nolan/24/000000/rectangle-stroked.png"></button>
         <button type="button" class="btn btn-light btn-sm" id="circle"><img src="https://img.icons8.com/nolan/24/000000/unchecked-circle.png"></button>
-        <button type="button" class="btn btn-light btn-sm" id="ellipse"><img src="https://img.icons8.com/nolan/24/000000/triangle-stroked.png"></button>
-
-        <button type="button" class="btn btn-light btn-sm" id="lineBres">Bresenham Line</button>
-        <button type="button" class="btn btn-light btn-sm" id="circleBres">Bresenham Circle</button>
+        <button type="button" class="btn btn-light btn-sm" id="ellipse"><img src="https://img.icons8.com/nolan/24/000000/ellipse.png"></button>
+        <button type="button" class="btn btn-light btn-sm" id="triangle"><img src="https://img.icons8.com/nolan/24/000000/triangle-stroked.png"></button>
 
         <br>
         <br>
+
         <button class="btn btn-light btn-sm" id="text"><img src="https://img.icons8.com/office/24/000000/text-box.png"></button>
         <input  class="btn btn-light btn-sm" type="number" id="text-size" min="6" max="100" value="14">
 
